Fix overlap of annotations switch with search button on small screens
Improves the fix in commit 214b8fe.

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -110,7 +110,7 @@ $ada-lang-primary-color: #228be6; // #2e8555;
   // TODO This is a bit error-prone and it would be better to have something like :has()
   // (currently requires layout.css.has-selector.enabled to be set to true in Firefox)
   // div:has(.DocSearch-Button) {
-  div[class*="Navbar-Search-styles-module"] {
+  div[class*="searchBox"] {
     position: inherit !important;
   }
 }
